--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <br>The valuse of the each crystal is hidden from you until you click on it.<br>
             <br>each time when the game starts, the game will change the value of each crystal.</p>
       </header>
-
-    <div id="crysals" class="Container">
+    <div class="dotted">
+      <div id="crysals" class="Container">
         <div class="row">
             <div class="col-12">
             </div>
@@ -44,6 +44,7 @@
             </div>
 
         </div>
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
