added DOM for current number

--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
         <br />The valuse of the each crystal is hidden from you until you click
         on it.<br />
         <br />each time when the game starts, the game will change the value of
-        each crystal.
+        each crystal.<br>
       </p>
     </header>
+
     
     <div class="crystals">
         
     </div>
+    <p id="result"></p>
+    <p id="current"></p>
+    <p id="wins"></p>
+    <p id="losses"></p>
 
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 
